--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.css"
+    integrity="sha512-gnAN+RgTMylunXI7AMg+PtcUGpKZFkZJoFIkAWvdPFRrFJz3p2tx4+9xbjILRfN7CzoViMgS8vSf06fSQzWZjA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
@@ -26,12 +34,12 @@
   </header>
   <main>
 
-    <section>
+    <section class="header">
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
     </section>
 
-    <section>
+    <section class="features">
       <h2>Our Features</h2>
       <ul>
         <li>
@@ -53,7 +61,7 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section class="team">
       <h2>Our Team</h2>
       <ul>
         <li>
@@ -78,7 +86,7 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section class="portfolio">
       <h2>Our Portfolio</h2>
       <ul>
         <li>
@@ -115,7 +123,7 @@
     </section>
 
   </main>
-  <footer>
+  <footer class="footer">
     <a href="./index.html">Web Studio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
   </footer>
