--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
     integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
@@ -80,22 +80,23 @@
       <h2 class="team-title">Our Team</h2>
       <ul class="team-list">
         <li class="team-item">
-          <img class="team-avatar" src="./images/img1.jpg" alt="Product Designer" width="264" height="260">
+          <img class="team-avatar" src="./images/img1.jpg" alt="Mark Guerrero - Product Designer" width="264"
+            height="260">
           <h3 class="team-name">Mark Guerrero</h3>
           <p class="team-position">Product Designer</p>
         </li>
         <li class="team-item">
-          <img class="team-avatar" src="./images/img2.jpg" alt="Frontend Developer" width="264" height="260">
+          <img class="team-avatar" src="./images/img2.jpg" alt="Tom Ford - Frontend Developer" width="264" height="260">
           <h3 class="team-name">Tom Ford</h3>
           <p class="team-position">Frontend Developer</p>
         </li>
         <li class="team-item">
-          <img class="team-avatar" src="./images/img3.jpg" alt="Marketing" width="264" height="260">
+          <img class="team-avatar" src="./images/img3.jpg" alt="Camila Garcia - Marketing" width="264" height="260">
           <h3 class="team-name">Camila Garcia</h3>
           <p class="team-position">Marketing</p>
         </li>
         <li class="team-item">
-          <img class="team-avatar" src="./images/img4.jpg" alt="UI Designer" width="264" height="260">
+          <img class="team-avatar" src="./images/img4.jpg" alt="Daniel Wilson - UI Designer" width="264" height="260">
           <h3 class="team-name">Daniel Wilson</h3>
           <p class="team-position">UI Designer</p>
         </li>
